# helicarrier-mcp

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  pyproject.toml
helicarrier_mcp/: __main__.py  auth.py  client.py  config.py  server.py
scripts/: lint.sh  test_tools.py
