[tool.poetry]
name = "helicarrier-mcp"
version = "0.1.0"
description = "Helicarrier MCP Server — Claude Code integration for fleet ops"
authors = ["Mission-DiA"]
packages = [{include = "helicarrier_mcp"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = ">=1.26.0"
httpx = "^0.27.0"
google-cloud-secret-manager = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
mypy = "^1.14.0"
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
